# eos-vala-hello-packaging

./: meson.build
data/: hello-packaging.appdata.xml.in  hello-packaging.desktop.in
src/: Application.vala
